# OKPaletteLab

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  cspell.json  mypy.ini  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  setup.bash
docs/: start_auto_build.sh  update_apidoc.sh  version_switcher_config.json
docs/icon/design/: note.md
docs/source/: color_maps.md  color_palettes.md  conf.py  index.rst  license.rst
docs/source/_static/: ok_palette_lab_custom.css
docs/source/how_to/: index.rst  install.md
docs/source/how_to/matplotlib/: index.rst  use_in_heatmap.md
docs/source/how_to/plotly/: index.rst  use_in_heatmap.md
docs/source/release_notes/: index.rst  v0.1.0.md  v0.1.0a4.md  v0.1.0a5.md  v0.2.0.md  v0.3.0.md  v0.4.0.md  v0.5.0.md
docs/source/samples/: arctan_2d.md  diverging_gaussian.md  gaussian.md  index.md  peaks.md  perlin_noise.md  positive_gaussian.md  spiral_pattern.md
ok_palette_lab/: __init__.py  matplotlib.py  plotly.py
ok_palette_lab_paraview/: autumn.json  autumn_wide.json  blue_brown_light.json  blue_brown_light_wide.json  blue_brown_white.json  blue_brown_white_wide.json  blue_orange_dark.json  blue_orange_dark_wide.json  blue_red_dark.json  blue_red_dark_wide.json  blue_red_light.json  blue_red_light_wide.json  blue_red_white.json  blue_red_white_wide.json  equal_hue.json  forest.json  forest_wide.json  ocean.json  ocean_wide.json  purple_green_yellow.json  rainbow.json  red.json  red_wide.json  tea.json
ok_palette_lab_tools/: __init__.py  generate_scripts.py
ok_palette_lab_tools/color_maps/: __init__.py  color_map.py  color_map_def.py  color_map_names.py  color_maps_def.yaml  generate_color_map.py
ok_palette_lab_tools/color_maps/tests/cyclic/: test_color_map.ipynb  test_figures.py
ok_palette_lab_tools/color_maps/tests/diverging/: test_color_map.ipynb  test_figures.py
ok_palette_lab_tools/color_maps/tests/general/: test_color_map.ipynb  test_figures.py
ok_palette_lab_tools/color_palettes/: __init__.py  color_palette.py  color_palette_def.py  color_palette_names.py  color_palettes_def.yaml  generate_color_palette.py  plot_color_palettes.py
ok_palette_lab_tools/color_palettes/tests/diverging/: blue_blown_light.ipynb  blue_blown_light_wide.ipynb  blue_blown_white.ipynb  blue_blown_white_wide.ipynb  blue_red_light.ipynb  blue_red_light_wide.ipynb  blue_red_white.ipynb  blue_red_white_wide.ipynb  test_color_palette.ipynb  test_figures.py
ok_palette_lab_tools/color_palettes/tests/general/: autumn.ipynb  autumn_wide.ipynb  ocean.ipynb  ocean_wide.ipynb  red.ipynb  red_wide.ipynb  test_color_palette.ipynb  test_figures.py
ok_palette_lab_tools/docs/: __init__.py  color_maps.py  color_palettes.py  generate_images.py  sample_common.py  sample_gaussian.py  sample_peaks.py  sample_perlin_noise.py  sample_spiral_patter.py
ok_palette_lab_tools/icon/: convert_icon.py  generate_icon.py  icon.svg.jinja  icon_for_docs.svg.jinja
ok_palette_lab_tools/matplotlib/: generate_script.py  matplotlib.py.jinja  test_color_map.ipynb
ok_palette_lab_tools/paraview/: __init__.py  generate_json.py
ok_palette_lab_tools/plotly/: __init__.py  generate_script.py  plotly.py.jinja
ok_palette_lab_tools/test_data/: __init__.py  arctan_2d.py  gaussian.py  peaks.py  perlin_noise.py  spiral_pattern.py
tests/: __init__.py
tests/matplotlib/: __init__.py  test_arctan_2d.py  test_plot_gaussian.py
tests/plotly/: __init__.py  test_arctan_2d.py  test_plot_gaussian.py
