[project]
name = "ok_palette_lab"
version = "0.5.0"
description = "Smooth color maps using Oklch color space for Plotly and matplotlib."
authors = [
    { name = "Kenta Kabashima", email = "kenta_program37@hotmail.co.jp" },
]
license = "MIT"
readme = "README.md"
keywords = ["color map", "Oklch"]
# Classifiers: https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    # poetry says that the following classifier of license is deprecated,
    # but actually PyPI requires it for correct handling.
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Visualization",
    "Typing :: Typed",
]
# networkx prohibits Python 3.14.1.
requires-python = ">=3.12,<3.15,!=3.14.1"
dependencies = []

[project.urls]
documentation = "https://okpalettelab.musicscience37.com"
repository = "https://gitlab.com/MusicScience37Projects/utility-libraries/OKPaletteLab"

[project.optional-dependencies]
plotly = ["plotly>=6"]
matplotlib = ["matplotlib>=3"]

[dependency-groups]
tools = [
    "pyyaml (>=6.0.3,<7.0.0)",
    "colour-science (>=0.4.7,<0.5.0)",
    "networkx (>=3.6.1,<4.0.0)",
    "numpy (>=2.4.6,<3.0.0)",
    "plotly (>=6.8.0,<7.0.0)",
    "jupyterlab (>=4.6.0,<5.0.0)",
    "ipywidgets (>=8.1.8,<9.0.0)",
    "ipython (>=9.14.1,<10.0.0)",
    "ipykernel (>=7.3.0,<8.0.0)",
    "noise (>=1.2.2,<2.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "pillow (>=12.2.0,<13.0.0)",
]
doc = [
    "sphinx (>=9.1.0,<10.0.0)",
    "sphinx-orange-book-theme (>=0.19.0,<0.20.0)",
    "myst-parser (>=5.1.0,<6.0.0)",
    "myst-nb (>=1.4.0,<2.0.0)",
    "scipy (>=1.18.0,<2.0.0)",
    "matplotlib (>=3.11.0,<4.0.0)",
]
test = [
    "pytest (>=9.1.1,<10.0.0)",
    "kaleido (>=1.3.0,<2.0.0)",
    "playwright (>=1.60.0,<2.0.0)",
]
dev = [
    "black (>=26.5.1,<27.0.0)",
    "isort (>=8.0.1,<9.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "pylint (>=4.0.6,<5.0.0)",
    "pre-commit (>=4.6.0,<5.0.0)",
    "mypy (>=2.1.0,<3.0.0)",
    "types-pyyaml (>=6.0.12.20260518,<7.0.0.0)",
    "doc8 (>=2.0.0,<3.0.0)",
    "sphinx-autobuild (>=2025.8.25,<2026.0.0)",
]

[tool.poetry]
packages = [
    { include = "ok_palette_lab" },
    # ok_palette_lab_tools is used only for development.
    { include = "ok_palette_lab_tools", format = [] },
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.pylint]
disable = ["R0801", "W0511", "C0301", "C0302", "R0913", "R0914"]
